--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.visially-hidden {
+.visually-hidden {
   position: absolute;
   inline-size: 1px;
   block-size: 1px;
@@ -22,13 +22,13 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
+  color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
 }
 
 h1,
@@ -58,17 +58,17 @@ ol {
 }
 
 .result__video-container {
-  position: relative;
   min-width: 711px;
   height: 386px;
   margin-bottom: 16px;
+  position: relative;
 }
 
 .result__video {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   object-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .search-form {
@@ -81,6 +81,17 @@ ol {
   border: none;
 }
 
+.search-form__label .search-form__pseudo-checkbox {
+  border: 1px solid #fff;
+  width: 19px;
+  height: 19px;
+  margin-right: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .search-form__label:has(.search-form__pseudo-checkbox) {
   display: flex;
   width: fit-content;
@@ -91,23 +102,11 @@ ol {
 .search-form__fieldset-title {
   font-weight: 400;
   font-size: 18px;
-  margin-bottom: 5px;
   color: #fff;
-}
-
-.search-form__label .search-form__pseudo-checkbox {
-  width: 19px;
-  height: 19px;
-  margin-right: 5px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #fff;
+  margin-bottom: 5px;
 }
 
 .search-form__textfield {
-  width: 225px;
   appearance: none;
   border: none;
   border-bottom: 1px solid #fff;
@@ -115,8 +114,9 @@ ol {
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
-  background-color: transparent;
   color: #fff;
+  background-color: transparent;
+  width: 225px;
 }
 
 .search-form__textfield::placeholder {
@@ -129,15 +129,15 @@ ol {
 }
 
 .button {
+  border: 1px solid #fff;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   text-align: center;
-  min-height: 34px;
-  cursor: pointer;
-  border: 1px solid #fff;
   color: #fff;
   background-color: transparent;
+  min-height: 34px;
+  cursor: pointer;
 }
 
 .button:active {
@@ -146,6 +146,7 @@ ol {
 
 .button:hover {
   text-decoration: underline;
+  text-underline-color: #fff;
 }
 
 .button:focus {
@@ -197,8 +198,8 @@ ol {
 }
 
 .content__details {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .title {
@@ -238,10 +239,6 @@ ol {
   background-color: #545050;
 }
 
-.content__card-link:active {
-  background-color: #545050;
-}
-
 .content__card-link:focus {
   outline: none;
 }
@@ -250,6 +247,10 @@ ol {
   outline: 1px solid #fff;
   outline-offset: 1px;
   margin: 2px;
+}
+
+.content__card-link:active {
+  background-color: #545050;
 }
 
 .content__video-card {
@@ -270,26 +271,26 @@ ol {
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
+  color: #fff;
   margin: 2px 0 6px 2px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  color: #fff;
 }
 
 .content__video-card-description {
   font-weight: 400;
   font-size: 18px;
   line-height: 90%;
+  color: #fff;
   margin-left: 2px;
   text-decoration: none;
-  color: #fff;
 }
 
 .content__video-card-thumbnail {
+  width: 194px;
   object-fit: cover;
   object-position: center;
-  width: 194px;
   margin: 2px 2px 2px 0;
 }
 
