--- a/styles/style.css
+++ b/styles/style.css
@@ -22,13 +22,13 @@ html {
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
-  color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
 }
 
 h1,
@@ -58,17 +58,17 @@ ol {
 }
 
 .result__video-container {
+  position: relative;
   min-width: 711px;
   height: 386px;
   margin-bottom: 16px;
-  position: relative;
 }
 
 .result__video {
-  object-fit: cover;
-  object-position: center;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -81,17 +81,6 @@ ol {
   border: none;
 }
 
-.search-form__label .search-form__pseudo-checkbox {
-  border: 1px solid #fff;
-  width: 19px;
-  height: 19px;
-  margin-right: 5px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .search-form__label:has(.search-form__pseudo-checkbox) {
   display: flex;
   width: fit-content;
@@ -102,11 +91,23 @@ ol {
 .search-form__fieldset-title {
   font-weight: 400;
   font-size: 18px;
-  color: #fff;
   margin-bottom: 5px;
+  color: #fff;
+}
+
+.search-form__label .search-form__pseudo-checkbox {
+  width: 19px;
+  height: 19px;
+  margin-right: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #fff;
 }
 
 .search-form__textfield {
+  width: 225px;
   appearance: none;
   border: none;
   border-bottom: 1px solid #fff;
@@ -114,9 +115,8 @@ ol {
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
-  color: #fff;
   background-color: transparent;
-  width: 225px;
+  color: #fff;
 }
 
 .search-form__textfield::placeholder {
@@ -129,15 +129,15 @@ ol {
 }
 
 .button {
-  border: 1px solid #fff;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   text-align: center;
-  color: #fff;
-  background-color: transparent;
   min-height: 34px;
   cursor: pointer;
+  border: 1px solid #fff;
+  color: #fff;
+  background-color: transparent;
 }
 
 .button:active {
@@ -197,8 +197,8 @@ ol {
 }
 
 .content__details {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .title {
@@ -238,6 +238,10 @@ ol {
   background-color: #545050;
 }
 
+.content__card-link:active {
+  background-color: #545050;
+}
+
 .content__card-link:focus {
   outline: none;
 }
@@ -246,10 +250,6 @@ ol {
   outline: 1px solid #fff;
   outline-offset: 1px;
   margin: 2px;
-}
-
-.content__card-link:active {
-  background-color: #545050;
 }
 
 .content__video-card {
@@ -270,26 +270,26 @@ ol {
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
-  color: #fff;
   margin: 2px 0 6px 2px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  color: #fff;
 }
 
 .content__video-card-description {
   font-weight: 400;
   font-size: 18px;
   line-height: 90%;
-  color: #fff;
   margin-left: 2px;
   text-decoration: none;
+  color: #fff;
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
   object-fit: cover;
   object-position: center;
+  width: 194px;
   margin: 2px 2px 2px 0;
 }
 
